# ecs_experiments

./: Cargo.toml  build.rs
res/: assets.ron
res/scripts/: main.luau
src/: app.rs  assets.rs  camera.rs  camera_controller.rs  common.wgsl  gltf.wgsl  gltf_model.rs  gpu.rs  instance.rs  lib.rs  light.rs  light.wgsl  main.rs  model.rs  resources.rs  shader.wgsl  skybox.rs  state.rs  texture.rs  util.rs  utils.rs  voxel.rs  voxel.wgsl
src/assets/: mod.rs
src/ecs/: components.rs  mod.rs  resources.rs  setup.rs  systems.rs  world.rs
src/ecs/systems/: agent.rs  animation.rs  camera.rs  lighting.rs  mod.rs  selection.rs  terrain.rs  time.rs  upload.rs
src/picking/: aabb.rs  mod.rs  pick.rs
src/render/: context.rs  draw.rs  mod.rs  pipeline.rs  texture.rs
src/render/shaders/: light.wgsl  selection.wgsl  skybox.wgsl  ui.wgsl  voxel.wgsl
src/scene/: animation.rs  camera.rs  gltf_model.rs  mod.rs  nav.rs  skybox.rs  terrain.rs
src/scripting/: mod.rs
src/ui/: app.slint  mod.rs
