[package]
name = "ecs_experiment"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
bevy_ecs = "0.18.1"
block-mesh = "0.2.0"
bytemuck = "1.25.0"
encase = "0.12.0"
env_logger = "0.11.10"
fast_poisson = "1.0"
glam = { version = "0.33.1", features = ["encase"] }
gltf = "1.4.1"
image = "0.25.10"
log = "0.4.32"
noise = "0.9.0"
pathfinding = "4.15.0"
pollster = "0.4.0"
rand = "0.9"
ron = "0.8"
serde = { version = "1.0.228", features = ["derive"] }
slint = { version = "1.16.1", default-features = false, features = ["compat-1-2", "std", "renderer-software"] }
tobj = { version = "4.0.3", features = ["tokio", "async"] }
wgpu = "29.0.3"
winit = "0.30.13"

[build-dependencies]
anyhow = "1.0.102"
fs_extra = "1.2"
glob = "0.3.3"
slint-build = "1.16.1"
